<resources>
    <string name="app_name"><font color="@color/white">GymGuru</font></string>
    <string name="ill_title">Hello there!</string>
    <string name="ill_subtitle">Welcome to <b>GymGuru</b> \n
    <br><font color="#00C9B8"><b>Login</b></font> if you already have an account. \n</br>
    <br><font color="#00C9B8"><b>Register</b></font> to make a new account. </br>
    </string>

    <string name="btn_login">Login</string>
    <string name="btn_regis">Register</string>

    <string name="tv_login">LOGIN</string>
    <string name="login_email">Enter your Email</string>
    <string name="login_password">Enter your Password</string>
    <string name="login_forgot_pw">Forgot password?</string>
    <string name="login_no_account">I don\'t have an account <font color="#00C9B8">Register</font></string>

    <string name="tv_regis">REGISTER</string>
    <string name="confirm_password">Confirm your Password</string>
    <string name="register_password">Enter your Password</string>
    <string name="register_email">Enter your Email</string>
    <string name="register_name">Enter your Name</string>
    <string name="register_have_account">Already have an account? <font color="#00C9B8">Login</font></string>

    <string name="intro_one_desc">Healthy Together!</string>
    <string name="intro_two_desc">Thank you for joining GymGuru. \nBy signing up, you are ready for a healthy life. Providing the best health knowledge for you is Our Top Priority.</string>
    <string name="intro_three_desc">GymGuru is a mobile application that functions as a means of online learning in the health sector. Not only that, this application also provides an overview of gym equipment and recommendations on how to use it.</string>

    <string name="tv_skip">Skip</string>
    <string name="tv_next">Next</string>
    <string name="tv_prev">Prev</string>
    <string name="otp_code">OTP Code</string>
    <string name="verif_email">Email</string>
    <string name="new_password">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="classify">Classify</string>
    <string name="tools_name">Tool\'s Name</string>
    <string name="tutorial">Tutorial</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="task_notes"><![CDATA[<notes>]]></string>
    <string name="task_name">Yoga Class</string>
    <string name="task_time">00:00-24:00</string>
    <string name="task_date">Mon, 1 January 2023</string>

    <string name="selected_item">Selected item:</string>
    <string-array name="Gender">
        <item>-- Select your Gender --</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="Tow">
        <item>Yoga Class</item>
        <item>Fitness</item>
        <item>Poundfit</item>
    </string-array>
</resources>